# hft-orderbook-benchmark

./: .clang-format  .gitignore  CMakeLists.txt  README.md  showcase.md
benchmarks/: CMakeLists.txt  main.cpp
benchmarks/modules/: csv_order_generator.hpp  mock_client.hpp  mpsc_benchmark.hpp  order_book_benchmark.cpp  order_book_benchmark.hpp  order_generator.cpp  order_generator.hpp
clients/: tcp_order_sender.cpp  tcp_order_sender.py
disseartation/: ERROR_LOG_2026-03-26.md  README.md  captions_canonical_2026-03-26.md  figure_blocks_canonical_2026-03-26.tex  hypotheses_refined.tex  references.bib  report.aux  report.blg  report.out  report.tex  report.toc  results_analysis_2026-03-26.md
disseartation/chapters/: 01_introduction.aux  02_background.aux  03_system_design.aux  04_implementation.aux  04_implementation.tex  05_testing_evaluation.aux  06_conclusions.aux
dissertation/: .gitignore  DISSERTATION_MASTERPLAN.md  ERROR_LOG.md  HYPOTHESIS_TESTING_UPGRADE_PLAN.md  MEASUREMENT_COOKBOOK_2026-03-26.md  Makefile  README.md  captions_canonical.md  chapter2_hardware_caveat.tex  dissertation_alignment_notes.md  figure_blocks.tex  hypotheses_refined.tex  improvements.md  initial_essay.md  mark_scheme.txt  references.bib  report.tex  report.txt  report_draft.txt  results_analysis.md  results_analysis_2026-03-26.md  word_count_command.txt
dissertation/chapters/: 01_introduction.tex  02_background.tex  03_system_design.tex  04_implementation.tex  05_testing_evaluation.tex  06_conclusions.tex
dissertation/figures/: architecture_diag.tex  cache_hierarchy.tex  fix_structure.tex  hexagonal_architecture.tex  kernel_bypass.tex  kernel_pipeline.tex  lob_diagram.tex  memory_pool.tex  mpmc_contention.tex  network_funnel.tex  pipeline_flush.tex  pool_match_flow.tex  spsc_queue.tex  system_architecture_diag.tex  telemetry_pipeline.tex
docs/: README.md  architecture.md  architecture.mmd  arrayOrderBookStructure.mmd  bench_mark_configuration.md  mapOrderBookStructure.mmd  pool_order_book_structure.mmd  thesis_figure_captions.md  user_manual_orderbook_developer.md  vectorOrderBookStructure.mmd
docs/benchmarking/: pinning_and_perf_workflow.md
docs/testing/: branch_coverage_iterative_workflow.md  coverage_how_it_works.md  oracle_design.md  testing_strategy.md
libs/fix/: fix_parser.hpp
plots/tables/: cancel_winners_direct.md  mid_tier_winners_no_array.md  mixed_scenario_validity.md  operation_winners_direct.md  operation_winners_no_array_direct.md  rank_direct_vs_gateway.md
results/: results.csv
results/perf/: direct_perf_20260323_204525.txt  manifest.csv
results/perf/validation_clean/: perf_fallbacks.txt
results/perf/validation_real/: branch_prediction_summary.csv  cache_hit_summary.csv  host_provenance.txt  l2_summary.csv  perf_array_dense_full.txt  perf_array_mixed.txt  perf_branch_array_dense_full.txt  perf_branch_array_mixed.txt  perf_branch_map_dense_full.txt  perf_branch_map_mixed.txt  perf_branch_pool_dense_full.txt  perf_branch_pool_mixed.txt  perf_branch_vector_dense_full.txt  perf_branch_vector_mixed.txt  perf_l1_array_dense_full.txt  perf_l1_array_mixed.txt  perf_l1_map_dense_full.txt  perf_l1_map_mixed.txt  perf_l1_pool_dense_full.txt  perf_l1_pool_mixed.txt  perf_l1_vector_dense_full.txt  perf_l1_vector_mixed.txt  perf_l2_array_dense_full.txt  perf_l2_array_mixed.txt  perf_l2_map_dense_full.txt  perf_l2_map_mixed.txt  perf_l2_pool_dense_full.txt  perf_l2_pool_mixed.txt  perf_l2_vector_dense_full.txt  perf_l2_vector_mixed.txt  perf_map_dense_full.txt  perf_map_mixed.txt  perf_pool_dense_full.txt  perf_pool_mixed.txt  perf_vector_dense_full.txt  perf_vector_mixed.txt  validation.csv
scratch/: calculate_stats.py  calculate_stats_simple.py  statistical_masterclass.md  test_count.tex
screencast/: README.md  final_script.md
scripts/: collect_branch_prediction_per_book.sh  combine_results.py  plot_benchmark.py  plot_results.py  run_benchmark.sh  run_direct_gateway_with_perf.sh  run_gateway_sweep.sh
scripts/benchmark_plotting/: __init__.py  cli.py  constants.py  data_processing.py  figures.py  findings.py  plot_style.py
scripts/hypothesis_testing/: analyze_hypothesis_results.py  analyze_results_scipy.py  combine_campaigns.py  finalize_full_campaign.sh  run_and_analyze.sh  run_hypothesis_campaign.py  verify_stats.py
src/: CMakeLists.txt  main.cpp
src/core/: IOrderBook.hpp  MatchingEngine.cpp  MatchingEngine.hpp  MetricsCollector.hpp  Order.hpp  Trade.hpp  Types.hpp  i_order_book.hpp  matching_engine.cpp  matching_engine.hpp  metrics_collector.hpp  order_book_factory.hpp
src/network/: FIXParser.cpp  FIXParser.hpp  TCPOrderGateway.cpp  TCPOrderGateway.hpp  fix_parser.cpp  fix_parser.hpp  tcp_order_gateway.cpp  tcp_order_gateway.hpp
src/orderbooks/: ArrayOrderBook.cpp  ArrayOrderBook.hpp  HybridOrderBook.cpp  HybridOrderBook.hpp  MapOrderBook.cpp  MapOrderBook.hpp  VectorOrderBook.cpp  VectorOrderBook.hpp  array_order_book.cpp  array_order_book.hpp  hybrid_order_book.cpp  hybrid_order_book.hpp  map_order_book.cpp  map_order_book.hpp  pool_order_book.cpp  pool_order_book.hpp  template_order_book.hpp  vector_order_book.cpp  vector_order_book.hpp
src/utils/: LockFreeQueue.hpp  MetricsCollector.hpp  lock_free_queue.hpp  metrics_collector.hpp  rdtsc.hpp  thread_pinning.hpp
tests/: CMakeLists.txt
tests/integration/: tcp_gateway_integration_test.cpp
tests/unit/: array_order_book_test.cpp  fix_parser_test.cpp  hybrid_order_book_test.cpp  lock_free_queue_test.cpp  map_order_book_branch_test.cpp  matching_engine_test.cpp  metrics_collector_test.cpp  order_book_factory_test.cpp  orderbook_branch_stress_test.cpp  orderbook_contract_test.cpp  pool_order_book_test.cpp  vector_order_book_branch_test.cpp
