# tests/CMakeLists.txt

enable_testing()

# You might want to use GoogleTest here. For now, we'll just add a placeholder.
# find_package(GTest REQUIRED)

# add_executable(unit_tests unit/test_map_orderbook.cpp)
# target_link_libraries(unit_tests PRIVATE hft_core GTest::gtest_main)
# add_test(NAME unit_tests COMMAND unit_tests)
